Sun Oct  5 20:53:09 2003  David Helder  <dhelder@umich.edu>

	* README (Features): Added Workrave

Sun Oct  5 14:29:03 2003  David Helder  <dhelder@umich.edu>

	* README (Features): Added Mail Notify, Sussen.  Remove Gabber,
	   Ximian Red Carpet

Sat Oct 4 2003 Andrew Lanoix <alanoix@umich.edu>

	* src/gnet-private.h: Define SOCKET as guint for non-windows platforms,
		Add Name-mangled versions of needed IPv6 structs for Mingw & VC,
		Add typedefs of necessary IPv6 func pointers,
		Define IN6_ARE_ADDR_EQUAL for Windows.
	* src/gnet.c (gnet_win32_at_exit): Add
	* src/gnet.c (gnet_init): Query OS for IPv6 support on Windows and set
		necessary func pointers at runtime.
	* gnetconfig.h: Define HAVE_IPV6 for Win32 version, check at runtime
		on Windows.
	* src/inetaddr.c (gnet_gethostbyname): Updated for IPv6 on Windows
	* src/inetaddr.c (gnet_gethostbyaddr): "
	* src/inetaddr.c (gnet_inetaddr_get_canonical_name): "
	* src/inetaddr.c (gnet_inetaddr_list_interfaces): "

	TODO: Fix up gnet_inetaddr_new_list_async() and gnet_inetaddr_get_name_async()
	so they work like their pthread equivalents. The current Windows 
	implementation using a hidden window can not be upgraded to IPv6 since the
	underlying functions it relies upon are not IPv6 compliant -- that is: 
	WSAAsyncGetHostByName() and WSAAsyncGetHostByAddr().


Sun Aug 24 20:52:52 2003  Andrew Lanoix <alanoix@umich.edu>

	* examples/echoserver-partyline.c: Added

2003-08-22  Tor Lillqvist  <tml@iki.fi>

	* acinclude.m4: New file. Dummy definition of AM_PATH_GLIB to fool
	aclocal on systems without GLib 1.2.

	* configure.ac: Check for Win32, set automake variable
	OS_WIN32. Call AC_LIBTOOL_WIN32. Define AM_PATH_GLIB if undefined
	(calling AC_MSG_ERROR). Disable static library build on Windows.

	* src/Makefile.am: On Win32, use -no-undefined and link with
	-lws2_32.

	* src/gnet-private.c: Mark variables used only here as static. Add
	prototypes, because of the -Wmissing-prototypes and -Werror.
